# wasm-snake

./: .gitignore  Cargo.toml  Makefile
src/: client.rs  common.rs  server.rs
src/common/: serializable_chacha.rs
static/: index.html
