[package]
name = "wasm-snake"
version = "0.1.0"
authors = ["Avi Weinstock <aweinstock314@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0"

futures = { version = "0.3", optional = true }
futures-util = { version = "0.3", optional = true }
tokio = { version = "0.2", features = ["macros"], optional = true }
warp = { version = "0.2", optional = true }

wasm-bindgen = { version = "0.2", optional = true }
wee_alloc = { version = "0.4", optional = true }

[dependencies.web-sys]
version = "0.3"
optional = true
features = ["Document", "Element", "Location", "MessageEvent", "Node", "WebSocket", "Window", "console"]

[features]
server-deps = ["futures", "futures-util", "tokio", "warp"]
client-deps = ["wasm-bindgen", "wee_alloc/size_classes", "web-sys"]


[[bin]]
name = "server"
path = "src/server.rs"

[lib]
path = "src/client.rs"
crate-type = ["cdylib", "rlib"]
